kubernetes/apps/default/netbox/app/route.yaml
# yaml-language-server: $schema=https://crd.kantai.xyz/gateway.networking.k8s.io/httproute_v1.json
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: netbox
spec:
  hostnames:
    - "${APP_SUBDOMAIN:-${APP}}.kantai.xyz"
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: netbox
          namespace: default
          port: 80
          weight: 1
